@@ -9,6 +9,10 @@ Version 1.11.11+dev:
      * Fixed missing objective in 'The Court of Karrag'.
  * Language and i18n:
    * Updated translations: German, Slovak
+ * Lua API:
+   * Fix bug #21761: wesnoth.synchronize_choice will now give a warning when 
+     the table returned by the user-specified function is not completely valid,
+     when wesnoth is running in debug mode (--debug command line flag).
  * Units:
    * Increased the experience requirement for the Rami from 32 to 39
    * Increased the experience requirement for the Saree from 56 to 64
